# EvalPulse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
datasets/: demo.json  qa-demo.json  rag-demo.json  security-demo.json
src/evalpulse/: __init__.py  agents.py  api.py  cli.py  config.py  dashboard.py  engine.py  metrics.py  models.py  store.py
src/evalpulse/datasets/: __init__.py  controller.py  service.py
tests/: test_api.py  test_cli.py  test_datasets.py  test_engine.py  test_store.py
