[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalpulse"
version = "0.1.0"
description = "Continuous, reproducible evaluations for AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pandas>=2.2,<3",
  "pydantic-settings>=2.7,<3",
  "streamlit>=1.41,<2",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
evalpulse = "evalpulse.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/evalpulse"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
